# sphinx-tags

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: release.yml  tests.yaml
docs/: Makefile  conf.py  configuration.rst  devel.rst  examples.md  examples.rst  index.rst  quickstart.rst  release.rst  tests.rst
docs/_templates/: sidebar-tags.html  tags.html
docs/contribute/: index.rst
docs/dev/: RELEASE.md  index.rst
docs/examples/: examples.md  index.rst  multiline.rst  raw-cells.ipynb
docs/tags/: documentation.rst  examples.rst  index.rst  installation.rst  quickstart.rst
src/sphinx_tags/: __init__.py
test/: conftest.py  test_badges.py  test_general_tags.py  test_tags.py
test/outputs/badges/: index.html  page_1.html
test/outputs/badges/_tags/: prefix-tag-3.html  tag-1.html  tag-2.html  tag-3.html  tag-4.html  tag_1.html  tagsindex.html
test/outputs/general/: index.txt  page_1.txt  page_2.txt  page_5.txt
test/outputs/general/_tags/: tag-3.txt  tag-4.txt  tag2.txt  tag_1.txt  tag_5.txt  tagsindex.txt  test-tag-please-ignore.txt
test/outputs/test1/: index.txt  page_1.txt  page_2.txt
test/sources/test-badges/: conf.py  index.md  page_1.md
test/sources/test-ipynb/: conf.py  index.rst  page_1.ipynb  page_2.ipynb  page_5.ipynb
test/sources/test-myst/: conf.py  index.md  page_1.md  page_2.md  page_5.md
test/sources/test-rst/: conf.py  index.rst  page_1.rst  page_2.rst  page_5.rst
test/sources/test-test1/: conf.py  page_1.md  page_2.md
(+10 files in other folders)
