[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-tags"
authors = [{name = "melissawm", email = "melissawm@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

keywords = [
    "documentation",
    "sphinx",
]

dependencies = [
    "sphinx>4",
    "pre-commit",
]

[project.optional-dependencies]
sphinx = [
    "pydata-sphinx-theme",
    "sphinx-design",
    "myst-parser",
]

[project.urls]
Home = "https://github.com/melissawm/sphinx-tags"

[tool.flit.module]
name = "sphinx_tags"

[tool.flit.sdist]
include = [
    "src/sphinx_tags/"
]
exclude = [
  ".*",  # Any hidden folders or files
  "docs/",
]
